Fight for the internet!

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <a class="btn" href="mailto:3jbc22@gmail.com">Email me!</a><br>
         <a class="btn" href="https://github.com/jackcrane">Or check out my GitHub</a><br>
         <span class="btn">Or talk to me on Discord <code>14365jack#0597</code></span>
+        <br><br><br>
+        <a class="btn" href="https://battleforthenet.com" title="Join the fight for net neutrality">Join the Battle for the Net</a><br>
       </section>
     </div>
   </body>
