--- a/answers.html
+++ b/answers.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
-  <form action="http://qa.jackcrane.rocks/" method="GET">
+  <form action="https://quizletcoalition.cc/nqc/answer.php" method="GET">
     <textarea placeholder="context" name="c" id="c"></textarea>
     <textarea placeholder="question" name="q" id="q"></textarea>
     <input type="submit">
