--- a/world_religions/index.html
+++ b/world_religions/index.html
@@ -30,6 +30,7 @@
       <option value="shintoism">Shintoism</option>
     </select>
     <p>Directions: Use the inputs to select two religions to compare</p>
+    <a href="source.pdf">View the source code that I wrote</a>
       <article class="Venn2">
   		<h2>Religions</h2>
   		<div class="circle one">
