--- a/tofly/index.html
+++ b/tofly/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.1/lodash.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -65,3 +65,4 @@
 		<script src="fly.js"></script>
 	</body>
 </html>
+ -->
