--- a/fs-img/index.html
+++ b/fs-img/index.html
@@ -7,7 +7,7 @@
   <title>Fullscreen, nonmutable image</title>
   <style media="screen">
     body, html, #a, #b {
-      overscroll-behavior:none;
+      overscroll-behavior:none!important;
       overflow:hidden;
       padding:0;
       font-family:sans-serif;
