--- a/fs-img/index.html
+++ b/fs-img/index.html
@@ -19,6 +19,7 @@
     }
     #a {
       padding:2%;
+      padding-top:50px;
       font-size:20px;
     }
     input {
@@ -39,7 +40,7 @@
     <p>Your images do not leave your computer. They will never be transmitted or sent anywhere.</p>
     <p>If you wish to upload a different image, simply reload the page.</p>
     <h2>If you wish to hide the toolbar on IOS:</h2>
-    <img src="https://images.macrumors.com/t/pVdlcnMd2NOTa21t_CoUrbWZzd8=/1600x0/filters:quality(90)/article-new/2019/07/how-to-hide-the-toolbar-in-safari-ios.jpg" width="500px" alt="">
+    <img src="https://images.macrumors.com/t/pVdlcnMd2NOTa21t_CoUrbWZzd8=/1600x0/filters:quality(90)/article-new/2019/07/how-to-hide-the-toolbar-in-safari-ios.jpg" width="75%" alt="">
   </section>
   <section id="b">
     <img src="" id="i">
